Header and gallery blocks were changed

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,5 +1,6 @@
 .header {
   &__content {
+    position: relative;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
@@ -58,8 +59,8 @@
 
     @include onDesktop {
       position: absolute;
-      left: 0;
-      bottom: 12%;
+      left: -56px;
+      bottom: 68px;
       display: flex;
       align-items: center;
 
