--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
 
-  width: 230px;
+  width: calc(100% - 50px);
   height: 50px;
 
   font-family: $fontPrimary;
