Header was changed

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,6 +1,7 @@
 .header {
+  position: relative;
+
   &__content {
-    position: relative;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
@@ -59,7 +60,7 @@
 
     @include onDesktop {
       position: absolute;
-      left: -56px;
+      left: 0;
       bottom: 68px;
       display: flex;
       align-items: center;
