--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -9,6 +9,10 @@
     overflow: hidden;
 
     @media (min-width: 768px) {
+      height: 384px;
+    }
+
+    @media (min-width: 1024px) {
       height: 100vh;
     }
   }
@@ -49,12 +53,13 @@
     z-index: -1;
 
     @media (min-width: 768px) {
-      height: 100vh;
+      height: 384px;
       width: 49vw;
       grid-column-start: 4;
     }
 
     @media (min-width: 1280px) {
+      height: 100vh;
       width: 57vw;
       grid-column-start: 6;
     }
@@ -69,8 +74,9 @@
   &__title {
     font-weight: 700;
     font-size: 45px;
-    text-align: center;
     text-transform: uppercase;
+
+    color: #000;
 
     margin-bottom: 20px;
 
