--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -12,5 +12,37 @@
 
   &__header {
     margin-bottom: 70px;
+
+    @media (min-width: 768px) {
+      margin-bottom: 88px;
+    }
+
+    @media (min-width: 1280px) {
+      margin-bottom: 200px;
+    }
+  }
+
+  &__actions {
+    margin-bottom: 60px;
+
+    @media (min-width: 768px) {
+      margin-bottom: 112px;
+    }
+
+    @media (min-width: 1280px) {
+      margin-bottom: 104px;
+    }
+  }
+
+  &__lection {
+    margin-bottom: 183px;
+
+    @media (min-width: 768px) {
+      margin-bottom: 208px;
+    }
+
+    @media (min-width: 1280px) {
+      margin-bottom: 302px;
+    }
   }
 }
