--- a/src/styles/blocks/title.scss
+++ b/src/styles/blocks/title.scss
@@ -1,4 +1,6 @@
 .title {
-  font-family: "Montserat", "IBM Plex Sans", sans-serif;
+  font-family: "Montserrat", sans-serif;
   line-height: 100%;
+  color: #0f0e08;
+  text-align: center;
 }
