--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,3 +9,6 @@
 @import "./blocks/nav.scss";
 @import "./blocks/logo.scss";
 @import "./blocks/buy-link.scss";
+@import "./blocks/actions.scss";
+@import "./blocks/exhibition.scss";
+@import "./blocks/lection.scss";
