Hover effects were added

--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -18,6 +18,8 @@
 
   border: 1px solid $colorGreen;
 
+  @include hover(transform, scale(1.05));
+
   @include onIpad {
     width: 200px;
     height: 70px;
