--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -62,6 +62,13 @@
     list-style: none;
   }
 
+  &__contacts-link {
+    display: block;
+    text-decoration: none;
+
+    @include hover(text-decoration, underline);
+  }
+
   &__text {
     margin: 0;
 
