--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -25,11 +25,15 @@
     width: 24px;
     height: 24px;
     background-image: url(../images/facebook.svg);
+
+    @include hover(transform, scale(1.1));
   }
 
   &--instagram {
     width: 24px;
     height: 24px;
     background-image: url(../images/instagram.svg);
+
+    @include hover(transform, scale(1.1));
   }
 }
