--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -3,6 +3,8 @@
     width: 56px;
     height: 62px;
 
+    @include hover(transform, scale(1.1));
+
     @include onIpad {
       height: 72px;
     }
