--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -72,6 +72,7 @@
       line-height: 100%;
       text-transform: uppercase;
       color: $colorLight;
+      text-decoration: none;
 
       transform: rotate(-90deg);
 
