--- a/src/styles/blocks/exhibition.scss
+++ b/src/styles/blocks/exhibition.scss
@@ -23,6 +23,10 @@
 
     margin-bottom: 24px;
 
+    &:hover {
+      transform: scale(1.1);
+    }
+
     @media (min-width: 768px) {
       height: 520px;
       margin-bottom: 40px;
