--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -19,4 +19,14 @@
       grid-column: 6 / 8;
     }
   }
+
+  &--footer {
+    height: 72px;
+    width: 63px;
+
+    @media (min-width: 768px) {
+      height: 72px;
+      width: 100%;
+    }
+  }
 }
