--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -5,6 +5,10 @@
   &__body {
     margin: 0;
 
+    &--with-menu {
+      overflow: hidden;
+    }
+
     @media (min-width: 768px) {
       position: static;
     }
@@ -19,6 +23,20 @@
 
     @media (min-width: 1280px) {
       margin-bottom: 200px;
+    }
+  }
+
+  &__menu {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+
+    transform: translate(-100%);
+
+    &:target {
+      transform: translate(0);
     }
   }
 
@@ -43,6 +61,18 @@
 
     @media (min-width: 1280px) {
       margin-bottom: 302px;
+    }
+  }
+
+  &__gallery {
+    margin-bottom: 100px;
+
+    @media (min-width: 768px) {
+      margin-bottom: 92px;
+    }
+
+    @media (min-width: 1280px) {
+      margin-bottom: 200px;
     }
   }
 }
