--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,13 @@
 @import "./blocks/nav.scss";
 @import "./blocks/logo.scss";
 @import "./blocks/buy-link.scss";
+@import "./blocks/menu.scss";
 @import "./blocks/actions.scss";
 @import "./blocks/exhibition.scss";
 @import "./blocks/lection.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/subsribe.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/shedule.scss";
+@import "./blocks/contacts.scss";
+@import "./blocks/navigation.scss";
