--- a/src/styles/blocks/actions.scss
+++ b/src/styles/blocks/actions.scss
@@ -5,7 +5,7 @@
 
     @media (min-width: 768px) {
       text-align: start;
-      font-style: 48px;
+      font-size: 48px;
 
       margin-bottom: 48px;
     }
