--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,9 @@
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "reset.scss";
+@import "blocks/grid.scss";
+@import "blocks/wrap.scss";
+@import "blocks/page.scss";
+@import "blocks/header.scss";
+@import "blocks/nav.scss";
