added Museum landing page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,19 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils/reset";
+@import "./utils/vars";
+@import "./utils/mixins";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/page.scss";
+@import "./blocks/top-actions.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/button.scss";
+@import "./blocks/header.scss";
+@import "./blocks/nav.scss";
+@import "./blocks/grid.scss";
+@import "./blocks/museum.scss";
+@import "./blocks/exhibition.scss";
+@import "./blocks/lection.scss";
+@import "./blocks/slider.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/subscription.scss";
+@import "./blocks/footer.scss";
