--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -3,6 +3,14 @@
   max-width: 1280px;
   margin: 0 auto;
 
+  @include onTablet {
+    margin-bottom: 88px;
+  }
+
+  @include onDesktop {
+    margin-bottom: 200px;
+  }
+
   &__wrap {
     display: flex;
     flex-direction: column;
@@ -21,8 +29,10 @@
     background-repeat: no-repeat;
     background-size: cover;
 
+
     @include onTablet {
       display: none;
+      margin-left: 0;
     }
 
     &--tablet {
@@ -54,6 +64,7 @@
     line-height: 100%;
     text-align: center;
     color: $main-color-black;
+    text-decoration: none;
 
     @include onTablet {
       font-size: 36px;
@@ -127,7 +138,7 @@
         flex-direction: row;
         align-items: center;
         position: relative;
-        top: -50px;
+        top: -59px;
         left: -48px;
         gap: 20px;
 
