--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -5,6 +5,7 @@ $button-color-green: #1A5A4C;
 $grey-color: #687480;
 $element-color-red: #F14A27;
 $dot-color-grey: #E0E0E0;
+$paragraph-color: #4E4E4E;
 
 
 
