--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,4 +1,26 @@
 .page {
+
+  &__body {
+    background: #fff;
+    margin: 0;
+
+    &--with-menu {
+      overflow: hidden;
+    }
+  }
+
+  &__menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    transform: translateX(-100%);
+    transition: transform 0.7s;
+
+    &:target {
+      transform: translateX(0);
+    }
+  }
 }
 
 
