--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,3 +8,6 @@
 @import "blocks/page.scss";
 @import "blocks/header.scss";
 @import "blocks/nav.scss";
+@import "blocks/menu.scss";
+@import "blocks/podii.scss";
+@import "blocks/gallery.scss";
