--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -37,10 +37,13 @@
   }
 
   &__menu-icon {
-    height: 12px;
-    width: 18px;
+    box-sizing: border-box;
+    width: min-content;
+
+    padding: 20px;
     
     background-image: url("/images/Vector.svg");
+    background-size: auto;
   }
 
   &__image {
