--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -3,6 +3,8 @@
   grid-template-columns: 1fr max-content 1fr;
   align-items: center;
 
+  box-sizing: border-box;
+
   padding: 9px 0;
 
   @media (min-width: 768px) {
