--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -7,11 +7,13 @@
 
   border: 1px solid $greenColor;
   box-sizing: border-box;
+  color: $textDarkColor;
 
   transition: all 0.3s;
 
   &:hover {
     background-color: $greenColor;
+    color: #fff;
   }
 
   @include onTablet {
@@ -25,7 +27,6 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 100%;
-    color: $textDarkColor;
   }
 
   &__image-container {
