--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,13 @@
 @import "utils";
-@import "fonts";
-@import "typography";
+@import "./blocks/page";
+@import "./blocks/icon";
+@import "./blocks/container";
+@import "./blocks/grid";
+@import "./blocks/header";
+@import "./blocks/actualSubmissions";
+@import "./blocks/place";
 
-body {
-  background: $c-gray;
+* {
+  margin: 0;
+  padding: 0;
 }
