--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -12,13 +12,20 @@
   }
 
   &--cross {
-    height: 16px;
-    width: 16px;
+    height: 18px;
+    width: 18px;
     background-image: url(../images/cross.svg);
+  }
 
-    @include onDesktop() {
-      height: 21px;
-      width: 21px;
-    }
+  &--fb {
+    height: 24px;
+    width: 11px;
+    background-image: url(../images/facebook.svg);
+  }
+
+  &--inst {
+    height: 24px;
+    width: 24px;
+    background-image: url(../images/instagram.svg);
   }
 }
