--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -2,21 +2,7 @@
   background-color: $colorGreen;
 
   &__content {
-    box-sizing: border-box;
     height: 100vh;
-    padding: 9px 0;
-
-    @include onTablet() {
-      padding: 15px 0;
-    }
-  }
-
-  &__top {
-    margin-bottom: 25%;
-
-    @include onDesktop {
-      margin-bottom: 10%;
-    }
   }
 
   &__list {
@@ -29,14 +15,17 @@
     display: flex;
     justify-content: center;
     margin-bottom: 24px;
+
+    &:first-child {
+      margin-top: 36px;
+    }
   }
 
   &__link {
-    display: inline-block;
+    display: block;
     padding-bottom: 8px;
     border-bottom: 1px solid transparent;
 
-    font-family: $fontMont;
     font-weight: 700;
     font-size: 30px;
     line-height: 100%;
@@ -46,8 +35,8 @@
     color: $mainBlack;
 
     @include onTablet {
-      padding-bottom: 24px;
-      font-size: 52px;
+      padding-bottom: 20px;
+      font-size: 36px;
     }
 
     &:hover {
@@ -59,7 +48,6 @@
     display: block;
     margin: 0 auto;
     width: max-content;
-    font-family: $fontMont;
     font-weight: 700;
     font-size: 14px;
     line-height: 100%;
@@ -67,7 +55,7 @@
     text-decoration: none;
 
     @include onTablet {
-      font-size: 24px;
+      font-size: 20px;
     }
 
     &:first-of-type {
