--- a/src/styles/blocks/top-actions.scss
+++ b/src/styles/blocks/top-actions.scss
@@ -1,15 +1,16 @@
 .top-actions {
   display: flex;
-  gap: 30%;
   align-items: center;
+  gap: 91px;
+
+  padding-top: 9px;
 
   @include onTablet {
-    gap: 55%;
-    margin-bottom: 40px;
+    gap: 416px;
+    padding-top: 15px;
   }
 
   @include onDesktop {
-    gap: 50%;
-    margin-bottom: 90px;
+    gap: 531px;
   }
 }
