--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,9 +1,151 @@
 .footer {
-  @include onDesktop {
-    background-image: url(../images/footer.png);
-    height: 456px;
-    background-position: center;
-    background-size: cover;
+  font-family: $fontIbn;
+  font-weight: 400;
+  font-size: 14px;
 
+  @include onDesktop {
+    height: 457px;
+    width: 100%;
+    background-image: url(../images/footer.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+
+  &__hider {
+    @include onDesktop {
+      display: none;
+    }
+  }
+
+  &__container {
+    @include onTablet {
+      display: grid;
+      grid-template-columns: 1fr 4fr 1fr;
+      gap: 30px;
+    }
+
+
+  }
+
+  &__logos {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 40px;
+
+    @include onTablet {
+      flex-direction: column;
+      justify-content: start;
+      gap: 62px;
+    }
+  }
+
+  &__icons {
+    display: flex;
+    gap: 26px;
+  }
+
+  &__content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+
+    @include onTablet {
+      margin-bottom: 64px;
+    }
+  }
+
+  &__section {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__section-name {
+    line-height: 140%;
+    margin-bottom: 20px;
+  }
+
+  &__wraper {
+    @include onTablet {
+      display: flex;
+      gap: 3px;
+    }
+  }
+
+  &__time {
+    font-weight: 600;
+    line-height: 150%;
+  }
+
+  &__weekends {
+    margin-top: 20px;
+  }
+
+  &__arrow {
+    display: block;
+    height: 50px;
+    width: 50px;
+    margin-left: 230px;
+    margin-bottom: 20px;
+    border: 1px solid $colorGreen;
+    border-radius: 50%;
+    background-image: url(../images/arrow.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+
+    @include onTablet {
+      display: none;
+    }
+  }
+
+  &__line {
+    width: 100%;
+    height: 1px;
+    margin-bottom: 40px;
+    background-color: rgba(26, 90, 76, 0.5);
+
+    @include onTablet {
+      width: 460px;
+      margin: 0 auto 64px;
+    }
+  }
+
+  &__nav {
+    display: flex;
+    column-gap: 20px;
+    margin-bottom: 60px;
+
+    @include onTablet {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+
+      &-1 {
+        justify-self: center;
+      }
+    }
+
+  }
+
+  &__nav-item {
+    display: block;
+    margin-bottom: 20px;
+    text-decoration: none;
+    line-height: 100%;
+    color: $colorBlack;
+  }
+
+  &__rights {
+    display: block;
+    font-size: 12px;
+    line-height: 140%;
+    text-align: center;
+    padding-bottom: 60px;
+
+    @include onTablet {
+      display: flex;
+      flex-direction: row-reverse;
+      justify-content: space-between;
+    }
   }
 }
