--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,10 +1,20 @@
 @import "./mixins";
 @import "./vars";
 @import "./blocks/container.scss";
-@import "./blocks/top-actions.scss";
 @import "./blocks/logo.scss";
 @import "./blocks/icon.scss";
 @import "./blocks/header.scss";
-@import "./blocks/page.scss";
+@import "./blocks/html.scss";
 @import "./blocks/menu.scss";
 @import "./blocks/footer.scss";
+@import "./blocks/top-actions.scss";
+@import "./blocks/main.scss";
+@import "./blocks/subscr.scss";
+
+p,
+h1,
+h2,
+h3,
+section {
+  margin: 0;
+}
