current events added

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,7 +4,7 @@
 @import "./blocks/container";
 @import "./blocks/grid";
 @import "./blocks/header";
-@import "./blocks/actualSubmissions";
+@import "./blocks/currentEvents";
 @import "./blocks/place";
 
 * {
