current gallery added

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,9 +5,12 @@
 @import "./blocks/grid";
 @import "./blocks/header";
 @import "./blocks/currentEvents";
+@import "./blocks/gallery";
+@import "./blocks/footer";
 @import "./blocks/place";
 
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
