--- a/src/styles/blocks/podii.scss
+++ b/src/styles/blocks/podii.scss
@@ -150,11 +150,13 @@
     }
 
     &-title {
+      display: flex;
       @extend %montserrat-400;
       font-size: 28px;
       line-height: 100%;
       color: $main-color-black;
       margin-bottom: 6px;
+      align-items: center;
 
       @include onTablet {
         font-size: 36px;
@@ -163,26 +165,11 @@
 
       &::after {
         content: "";
-        display: block;
         width: 10px;
         height: 10px;
         background-color: $element-color-red;
-        position: relative;
-        left: 265px;
-        top: -17px;
-        z-index: 1;
-
-        @include onTablet {
-          left: 340px;
-          top: -22px;
-          width: 15px;
-          height: 15px;
-        }
-
-        @include onDesktop {
-          left: 345px;
-          top: -23px;
-        }
+        margin-left: 10px;
+        transform: translateY(0);
       }
     }
 
