--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,27 +1,33 @@
 .gallery {
 
+  @include onDesktop {
+    margin-bottom: 200px;
+  }
+
+  &__slider {
+    margin: 0 auto 100px;
+
+    @include onTablet {
+      margin: 0 auto 92px;
+    }
+  }
+
   &__title {
     @extend %montserrat-700;
     font-size: 36px;
     line-height: 100%;
     color: $main-color-black;
     text-align: center;
-    margin: 0 40px auto;
-  }
+    margin: 0 auto 40px;
 
-  &__slider {
-
-  }
-
-  &__buttons {
-    display: flex;
-    flex-direction: row;
-  }
-
-  &__slider--mobile {
+    @include onTablet {
+      font-size: 48px;
+      text-align: left;
+      margin: 0 0 48px;
+    }
 
     @include onDesktop {
-      display: none;
+      margin: 0 0 56px;
     }
   }
 
@@ -33,8 +39,35 @@
     }
   }
 
+  &__slider-item--Desktop {
+    &-1 {
+      background-image: url(../images/gallery1.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+      height: 600px;
+      margin-bottom: 30px;
+    }
 
+    &-2 {
+      background-image: url(../images/gallery2.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+      height: 600px;
+      margin-bottom: 30px;
+    }
+
+    &-3 {
+      background-image: url(../images/gallery3.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+      height: 360px;
+    }
+
+    &-4 {
+      background-image: url(../images/gallery4.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+      height: 360px;
+    }
+  }
 }
-
-
-
