current gallery added

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -33,7 +33,6 @@
       }
 
       @include onDesktop {
-        padding: 164px 0;
         height: 552px;
       }
     }
@@ -49,6 +48,10 @@
 
       @include onTablet {
         margin-bottom: 64px;
+      }
+
+      @include onDesktop {
+        margin-bottom: 72px;
       }
     }
 
@@ -67,6 +70,13 @@
           width: 376px;
           height: 70px;
           margin-right: 16px;
+        }
+
+        @include onDesktop {
+          padding: 0 32px;
+          width: 472px;
+          height: 70px;
+          margin-right: 32px;
         }
       }
 
