--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -70,6 +70,34 @@
   &__slide-image {
     width: 100%;
     height: 100%;
+
+    &-1 {
+      background-image: url(../images/gallery1.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: top left;
+    }
+
+    &-2 {
+      background-image: url(../images/gallery2.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: top left;
+    }
+
+    &-3 {
+      background-image: url(../images/gallery3.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: 70%;
+    }
+
+    &-4 {
+      background-image: url(../images/gallery4.jpg);
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: bottom right;
+    }
   }
 
   &__radio {
