--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,15 +1,15 @@
 .footer {
-  background-image: url(../images/footer.jpg);
-  background-position: center;
-  background-size: cover;
-
   &__subscription {
     display: flex;
     flex-direction: column;
     justify-content: start;
     align-self: center;
     padding: 88px 20px;
+    margin-bottom: 52px;
     height: 386px;
+    background-image: url(../images/footer.jpg);
+    background-position: center;
+    background-size: cover;
     color: #fff;
 
     @include onTablet {
@@ -97,6 +97,156 @@
       &-arrow {
         width: 8px;
         height: 12px;
+      }
+    }
+  }
+
+  &__contacts {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 150%;
+    color: $colorText_H2_H3;
+
+    &--contact-address {
+      color: $colorText_H2_H3;
+      text-decoration: none;
+    }
+
+    &--contact-email {
+      color: $colorText_H2_H3;
+      text-decoration: none;
+    }
+
+    &--schedule {
+      @include onTablet {
+        margin-bottom: 64px;
+      }
+    }
+
+    &--up {
+      display: flex;
+      justify-content: end;
+      margin-bottom: 20px;
+
+      @include onTablet {
+        display: none;
+      }
+
+      &-round {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        content: "";
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        border: 1px solid $colorShowData;
+      }
+
+      &-arrow {
+        width: 10px;
+        height: 12px;
+
+      }
+    }
+
+    &--line {
+      content: "";
+      height: 1px;
+      background-color: rgba(26, 90, 76, 0.5);
+      margin-bottom: 64px;
+
+      @include onDesktop {
+        margin: 0 auto;
+        width: 1px;
+        height: 280px;
+      }
+    }
+
+    &--gallery {
+      &-gallery {
+        color: $colorText_H2_H3;
+        text-decoration: none;
+      }
+
+      &-show {
+        color: $colorText_H2_H3;
+        text-decoration: none;
+      }
+    }
+
+    &--about {
+      margin-bottom: 80px;
+
+      &-about {
+        color: $colorText_H2_H3;
+        text-decoration: none;
+      }
+
+      &-contacts {
+        color: $colorText_H2_H3;
+        text-decoration: none;
+      }
+    }
+
+    &--bottom {
+      margin: 0 auto;
+      text-align: center;
+
+      @include onTablet {
+        display: flex;
+        margin: 0;
+        justify-content: space-between;
+        margin-bottom: 40px;
+      }
+
+      &-1 {
+        margin-bottom: 10px;
+        @include onTablet {
+          display: flex;
+          order: 1;
+        }
+      }
+
+      &-2 {
+        @include onTablet {
+          display: flex;
+        }
+      }
+    }
+  }
+
+  &__logoSocials {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 52px;
+
+    @include onTablet {
+      display: block;
+    }
+
+    &--logo {
+      width: 64px;
+      height: 72px;
+
+      @include onTablet {
+        margin-bottom: 60px;
+      }
+    }
+
+    &--socials {
+      display: flex;
+
+      &-facebook {
+        width: 12px;
+        height: 24px;
+        margin-right: 32px;
+      }
+
+      &-instagram {
+        width: 24px;
+        height: 24px;
       }
     }
   }
