--- a/src/styles/blocks/currentEvents.scss
+++ b/src/styles/blocks/currentEvents.scss
@@ -13,7 +13,7 @@
       transform: scale(1.05);
     }
 
-    & :last-child {
+    &--3 {
       margin-bottom: 0;
     }
 
@@ -93,7 +93,7 @@
 
   &__lection {
     box-sizing: border-box;
-    margin: 0 auto 100px;
+    margin: 0 auto;
     padding: 24px 0 0;
     width: 280px;
     height: 140px;
@@ -103,7 +103,7 @@
     box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
 
     @include onTablet {
-      margin: 0 auto 88px;
+      margin: 0 auto -100px;
       padding: 45px 55px 50px;
       width: 572px;
       height: 204px;
