--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -2,6 +2,7 @@
   min-width: 320px;
   max-width: 1280px;
   margin: 0 auto;
+  transition: all 0.3s;
 
   @include onTablet {
     margin-bottom: 88px;
@@ -28,6 +29,10 @@
     background-image: url(../images/menu.svg);
     background-repeat: no-repeat;
     background-size: cover;
+
+    &:hover {
+      background-image: url(../images/menu-hover.svg);
+    }
 
 
     @include onTablet {
@@ -65,6 +70,10 @@
     text-align: center;
     color: $main-color-black;
     text-decoration: none;
+
+    &:hover {
+      color: $button-color-green;
+    }
 
     @include onTablet {
       font-size: 36px;
@@ -142,6 +151,7 @@
         left: -48px;
         gap: 20px;
 
+
         transform: rotate(-90deg);
 
         &--link {
@@ -151,6 +161,10 @@
           line-height: 100%;
           color: #687480;
           text-decoration: none;
+
+          &:hover {
+            color: $button-color-green;
+          }
         }
 
         &--line {
@@ -176,6 +190,18 @@
       align-items: center;
       justify-content: center;
       margin-bottom: 70px;
+      transition: all 0.3s;
+
+      &:hover {
+        transition: all 0.3s;
+        color: #fff;
+        background-color: $button-color-green;
+      }
+
+      &:active {
+        transition: all 0.3s;
+        box-shadow: 0px 8px 14px rgba(167, 55%, 23%, 0.48);
+      }
 
       &::after {
         content: "";
