--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -1,5 +1,30 @@
 .nav {
-  
+  margin-bottom: 80px;
+
+  @include onTablet {
+    margin-bottom: 120px;
+  }
+
+  @include onDesktop {
+    margin-bottom: 0;
+  }
+
+  &__link {
+    text-decoration: none;
+    font-size: 14px;
+    line-height: 100%;
+    @extend %ibm-400;
+    color: $main-color-black;
+    display: block;
+
+    &:hover {
+      color: $element-color-red;
+    }
+
+    &:first-child {
+      margin-bottom: 20px;
+    }
+  }
 }
 
 
