--- a/src/styles/blocks/podii.scss
+++ b/src/styles/blocks/podii.scss
@@ -11,6 +11,7 @@
     background-size: cover;
     background-position: center;
 
+
     @include onTablet {
       width: 700px;
       height: 390px;
@@ -26,6 +27,13 @@
   }
 
   &__block-container {
+    transition: all 0.5s;
+
+    &:hover {
+      transition: all 0.5s;
+      transform: scale(1.05);
+    }
+    
     display: flex;
     flex-direction: column;
     padding: 20px 0;
@@ -52,6 +60,7 @@
   }
 
   &__block-info {
+
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -108,6 +117,7 @@
 
 
   &__content {
+
     &-info {
       display: flex;
       flex-direction: row;
@@ -210,6 +220,10 @@
   }
 
   &__image {
+
+    overflow: hidden;
+    transition: transform 0.3s;
+
     margin-bottom: 20px;
 
     @include onTablet {
@@ -224,6 +238,17 @@
       display: flex;
       width: 280px;
       height: 210px;
+      transition: transform 0.7s;
+
+
+      &:hover {
+        transition: transform 0.7s;
+        transform: scale(1.2);
+      }
+
+      &:hover {
+      scale: 120%;
+      }
 
       @include onTablet {
         width: 699px;
