--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,3 +12,5 @@
 @import "blocks/podii.scss";
 @import "blocks/gallery.scss";
 @import "blocks/slider.scss";
+@import "blocks/subscribe.scss";
+@import "blocks/footer.scss";
