--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -21,10 +21,22 @@
   font-weight: 300;
 }
 
+%ibm-400 {
+  font-family: 'IBM Plex Sans';
+  font-style: normal;
+  font-weight: 400;
+}
+
 %ibm-500 {
   font-family: 'IBM Plex Sans';
   font-style: normal;
   font-weight: 500;
+}
+
+%ibm-600 {
+  font-family: 'IBM Plex Sans';
+  font-style: normal;
+  font-weight: 600;
 }
 
 %ibm-700 {
