--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,7 +1,7 @@
 $background-color: #fff;
 $main-color-black: #0F0E08;
 $color-title-black: #000;
-$button-color-green: #1A5A4C;
+$button-color-green: #1a5b4d;
 $grey-color: #687480;
 $element-color-red: #F14A27;
 $dot-color-grey: #E0E0E0;
