--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -40,12 +40,20 @@
   }
 
   &__slider-item--Desktop {
+    overflow: hidden;
+    transition: transform 0.5s;
+
     &-1 {
       background-image: url(../images/gallery1.jpg);
       background-repeat: no-repeat;
       background-size: cover;
       height: 600px;
       margin-bottom: 30px;
+
+      &:hover {
+        transition: all 0.5s;
+        transform: scale(1.05);
+      }
     }
 
     &-2 {
@@ -54,6 +62,11 @@
       background-size: cover;
       height: 600px;
       margin-bottom: 30px;
+
+      &:hover {
+        transition: all 0.5s;
+        transform: scale(1.05);
+      }
     }
 
     &-3 {
@@ -61,6 +74,11 @@
       background-repeat: no-repeat;
       background-size: cover;
       height: 360px;
+
+      &:hover {
+        transition: all 0.5s;
+        transform: scale(1.05);
+      }
     }
 
     &-4 {
@@ -68,6 +86,11 @@
       background-repeat: no-repeat;
       background-size: cover;
       height: 360px;
+
+      &:hover {
+        transition: all 0.5s;
+        transform: scale(1.05);
+      }
     }
   }
 }
