--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -71,6 +71,13 @@
     width: 100%;
     height: 100%;
 
+    transition: all 0.5s;
+
+    &:hover {
+      transition: all 0.5s;
+      transform: scale(1.05);
+    }
+
     &-1 {
       background-image: url(../images/gallery1.jpg);
       background-repeat: no-repeat;
