--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,6 +1,7 @@
 .page {
 
   &__body {
+    min-width: 320px;
     background: #fff;
     margin: 0;
 
@@ -10,6 +11,7 @@
   }
 
   &__menu {
+    z-index: 10;
     position: fixed;
     top: 0;
     left: 0;
