--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,10 @@
 @import "utils";
 @import "./blocks/page";
 @import "./blocks/icon";
+@import "./blocks/menu";
 @import "./blocks/container";
 @import "./blocks/grid";
+@import "./blocks/top-actions";
 @import "./blocks/header";
 @import "./blocks/currentEvents";
 @import "./blocks/gallery";
@@ -10,7 +12,7 @@
 @import "./blocks/place";
 
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
