--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -192,12 +192,12 @@
     &--bottom {
       margin: 0 auto;
       text-align: center;
+      margin-bottom: 40px;
 
       @include onTablet {
         display: flex;
-        margin: 0;
+        margin: 0 0 40px;
         justify-content: space-between;
-        margin-bottom: 40px;
       }
 
       &-1 {
