--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -1,13 +1,13 @@
 .main {
-    padding-bottom: 70px;
+  padding-bottom: 70px;
 
-    @include onTablet {
-      padding-bottom: 88px;
-    }
+  @include onTablet {
+    padding-bottom: 88px;
+  }
 
-    @include onDesktop {
-      padding-bottom: 200px;
-    }
+  @include onDesktop {
+    padding-bottom: 200px;
+  }
 
   &__container {
     display: flex;
@@ -38,7 +38,7 @@
     @include onDesktop {
       height: 655px;
       // margin: 0;
-      // width: 725px;
+      width: 725px;
       // margin: 0 55px;
 
     }
@@ -116,6 +116,10 @@
     background-position: center;
     background-repeat: no-repeat;
 
+    &:hover {
+      background-color: $mainBlack;
+    }
+
     @include onTablet {
       height: 70px;
       width: 70px;
@@ -134,6 +138,12 @@
     font-size: 14px;
     line-height: 100%;
     color: #687480;
+    text-decoration: none;
+    transition: border-color 0.3s;
+
+    &:hover {
+      color: $colorBlack;
+    }
 
     @include onDesktop {
       display: block;
@@ -149,4 +159,3 @@
     }
   }
 }
-
