--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,5 +1,6 @@
 .menu {
   background-color: $colorGreen;
+  z-index: 1;
 
   &__content {
     height: 100vh;
@@ -53,9 +54,14 @@
     line-height: 100%;
     color: $mainBlack;
     text-decoration: none;
+    border-bottom: 1px solid transparent;
 
     @include onTablet {
       font-size: 20px;
+    }
+
+    &:hover {
+      border-color: $mainBlack;
     }
 
     &:first-of-type {
