--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -3,18 +3,12 @@
   font-weight: 400;
   font-size: 14px;
 
-  @include onDesktop {
-    height: 457px;
-    width: 100%;
-    background-image: url(../images/footer.png);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
-
   &__hider {
     @include onDesktop {
-      display: none;
+      display: grid;
+      grid-template-columns: repeat(12, 70px);
+      grid-template-rows: 1fr auto;
+      gap: 30px;
     }
   }
 
@@ -25,7 +19,11 @@
       gap: 30px;
     }
 
-
+    @include onDesktop {
+      grid-column: 1/6;
+      display: flex;
+      gap: 130px;
+    }
   }
 
   &__logos {
@@ -38,6 +36,10 @@
       flex-direction: column;
       justify-content: start;
       gap: 62px;
+    }
+
+    @include onDesktop {
+      width: max-content;
     }
   }
 
@@ -54,11 +56,19 @@
     @include onTablet {
       margin-bottom: 64px;
     }
+
+    @include onDesktop {
+      gap: 30px;
+    }
   }
 
   &__section {
     display: flex;
     flex-direction: column;
+
+    @include onDesktop {
+      column-gap: 30px;
+    }
   }
 
   &__section-name {
@@ -71,6 +81,10 @@
       display: flex;
       gap: 3px;
     }
+
+    @include onDesktop {
+      width: max-content;
+    }
   }
 
   &__time {
@@ -80,6 +94,10 @@
 
   &__weekends {
     margin-top: 20px;
+
+    @include onDesktop {
+      width: 130px;
+    }
   }
 
   &__arrow {
@@ -109,6 +127,14 @@
       width: 460px;
       margin: 0 auto 64px;
     }
+
+    @include onDesktop {
+      grid-column: 6/8;
+      margin: 0;
+      margin-top: 130px;
+      width: 260px;
+      transform: rotate(-90deg);
+    }
   }
 
   &__nav {
@@ -125,6 +151,10 @@
       }
     }
 
+    @include onDesktop {
+      width: max-content;
+      column-gap: 70px;
+    }
   }
 
   &__nav-item {
@@ -133,6 +163,11 @@
     text-decoration: none;
     line-height: 100%;
     color: $colorBlack;
+    transition: border-color 0.3s;
+
+    &:hover {
+      color: #f14a27;
+    }
   }
 
   &__rights {
@@ -146,6 +181,25 @@
       display: flex;
       flex-direction: row-reverse;
       justify-content: space-between;
+    }
+
+    @include onDesktop {
+      grid-row: 2;
+      grid-column: 1 / -1;
+    }
+  }
+
+  &__adress {
+    text-decoration: none;
+    color: $colorBlack;
+    transition: border-color 0.3s;
+
+    @include onDesktop {
+      width: 170px;
+    }
+
+    &:hover {
+      color: #f14a27;
     }
   }
 }
