--- a/src/styles/blocks/html.scss
+++ b/src/styles/blocks/html.scss
@@ -1,6 +1,6 @@
 .html {
   height: 100%;
-  font-family: 'Montserrat', sans-serif;
+  font-family: Montserrat, sans-serif;
   color: $colorBlack;
 
   scroll-behavior: smooth;
@@ -9,6 +9,10 @@
     height: 100%;
     min-width: 320px;
     margin: 0;
+
+    &--with-menu {
+      overflow: hidden;
+    }
   }
 
   &__menu {
@@ -25,8 +29,8 @@
     }
   }
 
-  &____wrapper {
-    overflow: hidden;
+  &__wrapper {
+    overflow-x: hidden;
     min-height: 100%;
     display: flex;
     flex-direction: column;
