--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,11 @@
 @import "./blocks/top-actions.scss";
 @import "./blocks/main.scss";
 @import "./blocks/subscr.scss";
+@import "./blocks/place.scss";
+@import "./blocks/lecture.scss";
+@import "./blocks/swiper.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/page.scss";
 
 p,
 h1,
