--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -66,6 +66,10 @@
         color: $colorShow;
         font-size: 14px;
 
+        &:hover {
+          transform: scale(1.05);
+        }
+
         @include onTablet {
           width: 376px;
           height: 70px;
@@ -87,6 +91,11 @@
         width: 50px;
         height: 50px;
         background-color: #f14a27;
+        cursor: pointer;
+
+        &:hover {
+          transform: scale(1.05);
+        }
 
         @include onTablet {
           width: 70px;
@@ -110,11 +119,28 @@
     &--contact-address {
       color: $colorText_H2_H3;
       text-decoration: none;
+
+      &:hover {
+        font-weight: bold;
+      }
+    }
+
+    &--contact-tel {
+      color: $colorText_H2_H3;
+      text-decoration: none;
+
+      &:hover {
+        font-weight: bold;
+      }
     }
 
     &--contact-email {
       color: $colorText_H2_H3;
       text-decoration: none;
+
+      &:hover {
+        font-weight: bold;
+      }
     }
 
     &--schedule {
