--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -1,14 +1,40 @@
 .icon {
-  display: block;
-  width: 18px;
-  height: 18px;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-image: url(../images/menu.png);
-  transition: transform 0.3s;
+  width: 24px;
+  height: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 28px;
+
+  @include onTablet {
+    margin: 40px 0 64px;
+  }
+
+  @include onDesktop {
+    margin: 40px 0 144px;
+  }
 
   &:hover {
     transform: scale(1.1);
+  }
+
+  &--menu {
+    &-img {
+      width: 18px;
+      height: 12px;
+      display: block;
+
+      background-size: contain;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-image: url(../images/menu.png);
+      transition: transform 0.3s;
+    }
+  }
+
+  &--cross {
+    background-image: url(../images/cross.png);
+    background-repeat: no-repeat;
+    background-position: center;
   }
 }
