--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -1,9 +1,28 @@
 .logo {
-  display: block;
+  display: flex;
+  margin: 14px 0 0 -50px;
+
+  @include onTablet {
+    justify-content: center;
+    text-align: center;
+    align-self: center;
+    margin: -18px 0 0;
+  }
+
+  @include onDesktop {
+    justify-content: center;
+    // align-items: start;
+    margin: -100px 0 0;
+  }
 
   &__image {
+    display: block;
     width: 56px;
     height: 60px;
-    
+
+    @include onTablet {
+      height: 72px;
+      width: 64px;
+    }
   }
 }
