--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,7 +1,6 @@
 .menu {
   box-sizing: border-box;
   height: 100vh;
-  padding: $headerTopPadding 0;
   background-color: $colorShowData;
   overflow-y: auto;
 
@@ -10,7 +9,7 @@
   }
 
   &__list {
-    margin: 0 0 40px;
+    margin: 40px 0;
     padding: 0;
     list-style: none;
   }
@@ -47,7 +46,7 @@
     width: max-content;
     font-weight: 600;
     text-transform: uppercase;
-    color: $colorTextParagraf;
+    color: $colorText_H2_H3;
     text-decoration: none;
 
     &--phone {
@@ -56,7 +55,7 @@
       line-height: 27px;
     }
 
-    &--action {
+    &--address {
       padding-bottom: 8px;
       border-bottom: 1px solid;
       font-size: 12px;
