--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -3,3 +3,5 @@ $colorTextParagraf: #4e4e4e;
 $colorShow: #687480;
 $colorShowData: #1a5a4c;
 $headerTopPadding: 16px;
+$gridGapOnTablet: 30px;
+$headerBgsOnTablet: 50%;
