--- a/src/styles/blocks/grid.scss
+++ b/src/styles/blocks/grid.scss
@@ -10,7 +10,7 @@
 
   @include onDesktop {
     grid-template-columns: repeat(12, 1fr);
-    column-gap: 30px;
+    column-gap: $gridGapOnTablet;
   }
 
   &--desktop {
