--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -22,4 +22,18 @@
       margin-bottom: 48px;
     }
   }
+
+  &__menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: 0;
+    transform: translateX(-100%);
+    transition: transform 0.3s;
+
+    &:target {
+      transform: translateX(0);
+    }
+  }
 }
