--- a/src/styles/blocks/top-actions.scss
+++ b/src/styles/blocks/top-actions.scss
@@ -1,6 +1,7 @@
 .top-actions {
   display: flex;
   width: 55%;
+  z-index: 1;
   justify-content: space-between;
   align-items: center;
   padding: 16px 24px;
