--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,7 @@
 @import "./blocks/page";
 @import "./blocks/icon";
 @import "./blocks/menu";
+@import "./blocks/logo";
 @import "./blocks/container";
 @import "./blocks/grid";
 @import "./blocks/top-actions";
