bugs fixed after comments

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -18,8 +18,8 @@
 
   @include onDesktop {
     padding: 45px 0;
-    background-size: contain;
-    background-position-x: right;
+    background-size: cover;
+    background-position-x: left top;
   }
 
   &__icon {
@@ -34,7 +34,6 @@
 
     &:hover {
       transition: transform 0.5s;
-      transform: rotate(180deg);
       background-image: url(../images/cross-green.svg);
     }
   }
