--- a/src/styles/blocks/podii.scss
+++ b/src/styles/blocks/podii.scss
@@ -1,7 +1,7 @@
 .podii {
 
   &__block--wide {
-    width: 320px;
+    width: 100%;
     height: 210px;
     align-items: center;
     align-content: center;
@@ -13,13 +13,13 @@
 
 
     @include onTablet {
-      width: 700px;
+      width: 100%;
       height: 390px;
       margin-bottom: 208px;
     }
 
     @include onDesktop {
-      width: 1280px;
+      width: 100%;
       height: 550px;
       margin-bottom: 302px;
     }
@@ -33,7 +33,7 @@
       transition: all 0.5s;
       transform: scale(1.05);
     }
-    
+
     display: flex;
     flex-direction: column;
     padding: 20px 0;
@@ -236,9 +236,23 @@
 
     &--item {
       display: flex;
-      width: 280px;
+      width: 100%;
       height: 210px;
       transition: transform 0.7s;
+
+      &-1 {
+        background-image: url(../images/podii1.jpg);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
+
+      &-2 {
+        background-image: url(../images/podii2.jpg);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
 
 
       &:hover {
@@ -251,12 +265,12 @@
       }
 
       @include onTablet {
-        width: 699px;
+        width: 100%;
         height: 520px;
       }
 
       @include onDesktop {
-        width: 670px;
+        width: 100%;
       }
     }
   }
