--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -1,7 +1,7 @@
 .subscribe {
   display: flex;
   flex-direction: column;
-  width: 320px;
+  width: 100%;
   height: 386px;
   align-items: center;
 
@@ -11,16 +11,17 @@
   background-image: url(../images/subscribe.jpg);
   background-repeat: no-repeat;
   background-position: center center;
+  background-size: cover;
 
   @include onTablet {
-    width: 768px;
+    width: 100%;
     height: 380px;
     padding: 82px 154px;
     margin: 0 auto 51px;
   }
 
   @include onDesktop {
-    width: 1280px;
+    width: 100%;
     height: 550px;
     padding: 163px 355px;
     margin: 0 auto 48px;
