--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -178,9 +178,7 @@
     padding-bottom: 60px;
 
     @include onTablet {
-      display: flex;
-      flex-direction: row-reverse;
-      justify-content: space-between;
+      text-align: left;
     }
 
     @include onDesktop {
