--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -1,8 +1,10 @@
 .logo {
+  margin: 0 auto;
   &__image {
     height: 61px;
 
     @include onTablet() {
+      margin: 0;
       height: 72px;
     }
   }
